--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <h1>Hi I am Derrick Odari</h1>
             <p>Welcome to my webpage</p>
     </div>
-    <div class="main">
+    <div id="about" class="main">
         <div>
             <img class="my-photo" src="img/Odari.jpg" alt="My photo">
         </div>
         <div class="about">
             <h1>About Me</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe porro ex laudantium error consectetur ad nam voluptatibus harum doloremque ea commodi similique officia inventore ullam a, deserunt magni obcaecati impedit.
+               I am a talented front-end developer based in Nairobi ,Kenya who is currently in a bootcamp with other talented peers called Unclebigbay and friends.I like to think my career as one big  learning experience that continuously with each project and collaboration.With dedication to functionality and curiosity for what's ahead of the curve ,I keep my work practical ,relevant and creative.Have a look at my past projects and feel free to reach out with any questions and opportunities.
             </p>
         </div>
     </div>
@@ -37,6 +37,7 @@
     </aside>
     <footer id="contact">
         <h2>Contact me:</h2>
+
     </footer>
     
 </body>
