--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/32e527b362.js" crossorigin="anonymous"></script>
     <title>Portfolio Website</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
             <li class="nav-links"><a href="#home">Home</a></li>
             <li class="nav-links"><a href="#about">About</a></li>
             <li class="nav-links"><a href="#skills">Skills</a></li>
+            <li class="nav-links"><a href="#projects">Projects</a></li>
             <li class="nav-links"><a href="#contact">Contact</a></li>
           </ul>
     </header>
@@ -32,11 +34,21 @@
             </p>
         </div>
     </div>
-    <aside id="skills">
+    <div id="skills">
         <h2>My skills</h2>
-    </aside>
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3"></i>
+        <i class="fab fa-git"></i>
+    </div>
+    <div id="projects">
+        <h2>My projects</h2>
+
+    </div>
     <footer id="contact">
         <h2>Contact me:</h2>
+        <i class="fab fa-github"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-twitter"></i>
 
     </footer>
     
