--- a/index.html
+++ b/index.html
@@ -36,19 +36,56 @@
     </div>
     <div id="skills">
         <h2>My skills</h2>
-        <i class="fab fa-html5"></i>
-        <i class="fab fa-css3"></i>
-        <i class="fab fa-git"></i>
+        <div class="icons">
+            <div class="icon-container">
+                <i class="fab fa-html5 fa-8x "></i>
+                <p>Htm5l</p>
+            </div>
+          <div class="icon-container">
+            <i class="fab fa-css3 fa-8x"></i>
+            <p>CSS3</p>
+          </div>
+       <div class="icon-container">
+        <i class="fab fa-git fa-8x "></i>
+        <p>Git</p>
+       </div>
+       
+        </div>
     </div>
-    <div id="projects">
-        <h2>My projects</h2>
+     <div id="projects">
+        <h2>My projects</h2> 
+        <div class="container">
+            <a
+      href="https://odari-d.github.io/chris-brown-tribute-page/"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="img/tribute.png"
+        alt="project"
+      />
+      <p class="project-title">
+        Tribute Page
+      </p>
+    </a>
 
-    </div>
+        </div>
+     </div>
     <footer id="contact">
         <h2>Contact me:</h2>
+        <div class="social">
         <i class="fab fa-github"></i>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-twitter"></i>
+        <p>Github</p>
+        </div>
+        <div class="social">
+            <i class="fab fa-linkedin"></i>
+            <p>Linkedin</p>
+        </div>
+        <div class="social">
+            <i class="fab fa-twitter"></i>
+            <p>Twitter</p>
+        </div>
 
     </footer>
     
