--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     <footer id="contact">
         <h2>Contact me:</h2>
         <div class="social">
-        <i class="fab fa-github"></i>
+        <a href="https://github.com/Odari-D" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
         <p>Github</p>
         </div>
         <div class="social">
-            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/derrick-odari-743793208/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
             <p>Linkedin</p>
         </div>
         <div class="social">
-            <i class="fab fa-twitter"></i>
+            <a href="https://twitter.com/DerrickAtongo" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             <p>Twitter</p>
         </div>
 
