changed footer height

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>
         The internet is quite a fun place to be , <br>I try maintaining the same while making my projects.
         </p>
-        <button class='btn'> Contact Me</button>
+     <a href="#contact"> <button class='btn'> Contact Me</button></a>  
     </div>
         <div class="img-inner">
          <img src="img/Odari.jpg" alt="My portrait image" class="container_img"/>
@@ -42,7 +42,7 @@
             <div id="container">
                 <h1>About Me</h1>
                 <p>
-                   My Name is Odari Derrick Atongo and I am a passionste Front-End developer based in Nairobi ,Kenya who is currently in a program with other talented peers called Zuri.team.I like to think my career as one big  learning experience that continue with each project and collaboration.With dedication to functionality and curiosity for what's ahead of the curve .I keep my work practical ,relevant and creative.Have a look at my past projects and feel free to reach out with any questions and opportunities.
+                   My Name is Odari Derrick Atongo and I am a passionate Front-End developer based in Nairobi ,Kenya who is currently in a program with other talented peers called Zuri.team.I like to think of my tech journey as an experience that continue to build up with each project and collaboration.With dedication to functionality and curiosity for what's ahead of the curve .I keep my work practical ,relevant and creative.Have a look at my past projects and feel free to reach out with any questions and opportunities.
                 </p>
         </div>
           
